adição sobre cr7

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#about" >Sobre mim</a>
+                        <a href="#about" >Sobre CR7</a>
                     </li>
                     <li>
                         <a href="#contact" >Contato</a>
